--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,6 @@ Description: Provides an interface to the StackExchange web API
 Version: 0.1.0
 Author: Jeff Gentry <geoffjentry@gmail.com>
 Maintainer: Jeff Gentry <geoffjentry@gmail.com>
-Depends: RCurl, RJSONIO, methods
+Depends: RCurl, RJSONIO, Rcompression, methods
 License: Artistic-2.0
 
