--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,8 @@ Description: Provides an interface to the StackExchange web API
 Version: 0.1.0
 Author: Jeff Gentry <geoffjentry@gmail.com>
 Maintainer: Jeff Gentry <geoffjentry@gmail.com>
-Depends: RCurl, RJSONIO, Rcompression, methods
+Depends: RCurl, RJSONIO, methods
 License: Artistic-2.0
+Collate: comm.R utils.R users.R answers.R badges.R comments.R
+	privileges.R questions.R revisions.R search.R tags.R
 
