fixed bug in questions - wasn't properly passing on requested IDs filled in NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,14 @@ export('allBadges')
 export('nameBadges')
 export('tagBadges')
 export('badgeRecipients')
+export('registerAPIKey')
 export('getComments')
 export('getPrivileges')
+export('getQuestions')
+export('getUnansweredQuestions')
+export('getNoAnswerQuestions')
+export('getQuestionLinks')
+export('getQuestionRelated')
 export('searchStackSite')
 export('getTags')
 export('getTagSynonyms')
